--- a/test/benchmarks/net_cluster_nmf_run_file.yml
+++ b/test/benchmarks/net_cluster_nmf_run_file.yml
@@ -1,20 +1,65 @@
-network_file_name: ./run_dir/input_data/final_clean_4col.edge
-samples_file_name: ./run_dir/input_data/final_clean_full_matrix.df
+# yaml parameters file template with all options for nmf and net-nmf with or without consensus clustering
+
+method: cc_net_cluster_nmf
+#	A clustering method name recongized by samples_clustering.py.
+# 	cluster_nmf
+# 	cc_cluster_nmf
+# 	net_cluster_nmf
+# 	cc_net_cluster_nmf
+
+gg_network_name_full_path: ./run_dir/input_data/keg_ST90_4col.edge
+#	4 col edge file for building adjacency matrix in net nmf and rwr.
+
+spreadsheet_name_full_path: ./run_dir/input_data/tcga_ucec_somatic_mutation_data.df
+#	dataframe == matrix with row and column names in .tsv format.
+
 results_directory: ./run_dir/results
+#	Where the computational output will be written.
+
 tmp_directory: ./run_dir/tmp
-method:  net_cluster_nmf
-k: "4"   
-number_of_iteriations_in_rwr: "100"   
-obj_fcn_chk_freq: "50"    
-it_max: "10000"   
-h_clust_eq_limit: "200"   
-restart_tolerance: "0.0001"   
-lmbda: "1400"    
-display_clusters: "0"  
-restart_probability: "0.7"   
-verbose: "0"   
-use_now_name: "1000000"  
-method1: cluster_nmf   
-method2: cc_cluster_nmf    
-method3: net_cluster_nmf   
-method4: cc_net_cluster_nmf
+#	Directory where partial clustering results are written untill reading into consensus matrix.
+
+number_of_clusters: "3"
+#	Inner dimension of matrix factorization will be set to this.
+
+display_clusters: "0"
+#	Display clustering graphically may require system accomodations.
+
+nmf_conv_check_freq: "50"
+#	Number of iterations between convergence check calculation (both nmf and net-nmf).
+
+nmf_max_iterations: "10000"
+#	Maximum number of iterations in one bootstrap.
+
+nmf_max_invariance: "200"
+#	Maximum number of iterations without change in clustering.
+
+
+#			Required for network based nmf:
+rwr_max_iterations: "100"
+#	Random walk with restart; maximum number of iterations without convergence.
+
+rwr_convergence_tolerence: "0.0001"
+#	Finish rwr when the frobenius norm of the spreadsheet vector(s) is within tolerence of the previous one.
+
+rwr_restart_probability: "0.7"
+#	rwr_restart_probability = alhpa in Vn+1 = alpha * N * Vn + (1-alpha) * Vo
+
+nmf_penalty_parameter: "1400"
+#	nmf_penalty_parameter = lambda as in: minimize ||X-W*H|| + lambda(W'*N*W)
+
+
+#			Required for consensus clustering:
+rows_sampling_fraction: "0.8"
+#	Random sample of rows portion.
+
+cols_sampling_fraction: "0.8"
+#	Rancom sample of columns portion.
+
+number_of_bootstraps: "5"
+#	Number of random samplings to perform and incorporate into the consensus matrix.
+
+
+#			Obsolete: soon to delete.
+# verbose: "0"
+# use_now_name: "1000000"
