--- a/test/benchmarks/net_cluster_nmf_run_file.yml
+++ b/test/benchmarks/net_cluster_nmf_run_file.yml
@@ -1,6 +1,6 @@
 # yaml parameters file template with all options for nmf and net-nmf with or without consensus clustering
 
-method: cc_net_cluster_nmf
+method: net_cluster_nmf
 #	A clustering method name recongized by samples_clustering.py.
 # 	cluster_nmf
 # 	cc_cluster_nmf
