--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-# Created by .ignore support plugin (hsz.mobi)
-.gitignore
 .idea/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+env/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
