--- a/test/benchmarks/cc_net_cluster_nmf_run_file.yml
+++ b/test/benchmarks/cc_net_cluster_nmf_run_file.yml
@@ -1,5 +1,7 @@
 # yaml parameters file template with all options for nmf and net-nmf with or without consensus clustering
 
+use_paralell_processing: "0"
+
 method: cc_net_cluster_nmf
 #	A clustering method name recongized by samples_clustering.py.
 # 	cluster_nmf
@@ -58,8 +60,3 @@ cols_sampling_fraction: "0.8"
 
 number_of_bootstraps: "5"
 #	Number of random samplings to perform and incorporate into the consensus matrix.
-
-
-#			Obsolete: soon to delete.
-# verbose: "0"
-# use_now_name: "1000000"
