--- a/test/benchmarks/cc_cluster_nmf_run_file.yml
+++ b/test/benchmarks/cc_cluster_nmf_run_file.yml
@@ -1,6 +1,6 @@
 # yaml parameters file template with all options for nmf and net-nmf with or without consensus clustering
 
-use_paralell_processing: "0"
+use_parallel_processing: "1"
 
 method: cc_cluster_nmf
 #	A clustering method name recongized by samples_clustering.py.
