--- a/test/Makefile
+++ b/test/Makefile
@@ -43,4 +43,4 @@ clean_dir_recursively:
 	$(RMR) $(RUN_DIR)
 
 unit_tests:
-	PYTHONPATH=`pwd`/src; cd test/unit; make all_unit_tests 
+	cd unit; make all_unit_tests
