unit test setup and run added

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,6 +4,7 @@ GZIP = gzip
 GZIP_D = gzip -d
 INPUT_DATA_DIR = ../data
 RUN_DIR = ./run_dir
+UNIT_TEST_TEMP_DIR = ./unit/tmp
 RESULTS_DIR = $(RUN_DIR)/results
 RUN_FILES = ../data/run_files
 SCRIPT = ../src/samples_clustering.py
@@ -41,6 +42,9 @@ copy_run_files:
 
 clean_dir_recursively:
 	$(RMR) $(RUN_DIR)
+
+unit_test_setup:
+	$(MKDIR_P) $(UNIT_TEST_TEMP_DIR)
 
 unit_tests:
 	cd unit; make all_unit_tests
