--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -1,4 +1,4 @@
-# 
+# YAML format parameters for consensus clustering network based non-negative matrix factorization -- a clustering method
 
 method: cc_net_cluster_nmf
 
@@ -11,12 +11,13 @@ spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data
 results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
+# estimated number of clusters; number of bootstraps (number of sub-samples included in consensus)
 number_of_clusters: "3"
 number_of_bootstraps: "5"
 
 rows_sampling_fraction: "0.8"
 cols_sampling_fraction: "0.8"
-
+ 
 nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
