--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -2,8 +2,7 @@
 
 method: cc_cluster_nmf
 
-# Gene x Gene Network stored in 4 col format;   Gene x Set-id Spreadsheet
-gg_network_name_full_path: ../data/networks/keg_ST90_4col.edge
+# Gene x Set-id Spreadsheet
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 
 # directories for storing run results and tmp data
