--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -1,4 +1,4 @@
-# YAML format parameters for consensus clustering non-negative matrix factorization
+# Parameters for consensus clustering, non-negative matrix factorization.
 
 method: cc_cluster_nmf
 
