--- a/data/run_files/nmf_run_file.yml
+++ b/data/run_files/nmf_run_file.yml
@@ -1,12 +1,24 @@
-# yaml parameters file template with all options for nmf without consensus clustering
+# Parameters for non-negative matrix factorization.
 
 method: cluster_nmf
 
+# Gene x Set-id Spreadsheet
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
+
+# directories for storing run results and tmp data
 results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
+
+# estimated number of clusters; bootstraps = number of sub-samples included in consensus
 number_of_clusters: "3"
-display_clusters: "0"
+number_of_bootstraps: "5"
+# bootstrap sub-sample size
+rows_sampling_fraction: "0.8"
+cols_sampling_fraction: "0.8"
+
+# iterations between invariance checks; loop exit; absolute max iterations
 nmf_conv_check_freq: "50"
-nmf_max_iterations: "10000"
 nmf_max_invariance: "200"
+nmf_max_iterations: "10000"
+
+display_clusters: "0"
