--- a/data/run_files/nmf_run_file.yml
+++ b/data/run_files/nmf_run_file.yml
@@ -9,12 +9,8 @@ spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data
 results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
-# estimated number of clusters; bootstraps = number of sub-samples included in consensus
+# estimated number of clusters
 number_of_clusters: "3"
-number_of_bootstraps: "5"
-# bootstrap sub-sample size
-rows_sampling_fraction: "0.8"
-cols_sampling_fraction: "0.8"
 
 # iterations between invariance checks; loop exit; absolute max iterations
 nmf_conv_check_freq: "50"
