--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -12,11 +12,11 @@ tmp_directory: ./run_dir/tmp
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
 number_of_clusters: "3"
 number_of_bootstraps: "5"
-# bootstrap sub-sample size
+
 rows_sampling_fraction: "0.8"
 cols_sampling_fraction: "0.8"
 
-# iterations between invariance checks; loop exit; absolute max iterations
+# iterations between loop invariance checks; loop exit test; absolute max loops
 nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
