--- a/data/run_files/net_nmf_run_file.yml
+++ b/data/run_files/net_nmf_run_file.yml
@@ -13,7 +13,7 @@ tmp_directory: ./run_dir/tmp
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
 number_of_clusters: "3"
 
-# iterations between invariance checks; loop exit; absolute max iterations; network weighting factor
+# iterations between loop invariance checks; loop exit test; absolute max loops; network weighting factor
 nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
