--- a/data/run_files/nmf_run_file.yml
+++ b/data/run_files/nmf_run_file.yml
@@ -12,7 +12,7 @@ tmp_directory: ./run_dir/tmp
 # estimated number of clusters
 number_of_clusters: "3"
 
-# iterations between invariance checks; loop exit; absolute max iterations
+# iterations between loop invariance checks; loop exit test; absolute max loops
 nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
