--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,9 +5,7 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = ../samples_clustering_docs
-PDFBUILDDIR = /tmp
-PDF = ../manual.pdf
+BUILDDIR      = build
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
@@ -98,9 +96,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/samples_clustering.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/samples_clustering_pipeline.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/samples_clustering.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/samples_clustering_pipeline.qhc"
 
 .PHONY: applehelp
 applehelp:
@@ -117,8 +115,8 @@ devhelp:
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/samples_clustering"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/samples_clustering"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/samples_clustering_pipeline"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/samples_clustering_pipeline"
 	@echo "# devhelp"
 
 .PHONY: epub
@@ -143,11 +141,10 @@ latex:
 
 .PHONY: latexpdf
 latexpdf:
-	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(PDFBUILDDIR)/latex
+	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo "Running LaTeX files through pdflatex..."
-	$(MAKE) -C $(PDFBUILDDIR)/latex all-pdf
-	cp $(PDFBUILDDIR)/latex/*.pdf $(PDF)
-	@echo "pdflatex finished; see $(PDF)"
+	$(MAKE) -C $(BUILDDIR)/latex all-pdf
+	@echo "pdflatex finished; the PDF files are in $(BUILDDIR)/latex."
 
 .PHONY: latexpdfja
 latexpdfja:
