--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -12,7 +12,7 @@ tmp_directory: ./run_dir/tmp
 
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
 number_of_clusters: "3"
-number_of_bootstraps: "5"
+number_of_bootstraps: 5
 
 rows_sampling_fraction: "0.8"
 cols_sampling_fraction: "0.8"
