--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -11,7 +11,7 @@ results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
-number_of_clusters: "3"
+number_of_clusters: 3
 number_of_bootstraps: 4
 
 rows_sampling_fraction: "0.8"
@@ -28,7 +28,7 @@ rwr_max_iterations: "100"
 rwr_restart_probability: "0.7"
 rwr_convergence_tolerence: "0.0001"
 
-display_clusters: "0"
+display_clusters: 0
 
 # 0 serial , 1 parallel locally, 2 distribute across clusters
 processing_method: 2
