--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -10,7 +10,7 @@ results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
-number_of_clusters: "3"
+number_of_clusters: 3
 number_of_bootstraps: 5
 
 rows_sampling_fraction: "0.8"
@@ -21,5 +21,5 @@ nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
 
-display_clusters: "0"
-use_parallel_processing: "1"
+display_clusters: 0
+processing_method: 1
