--- a/data/run_files/net_nmf_run_file.yml
+++ b/data/run_files/net_nmf_run_file.yml
@@ -11,7 +11,7 @@ results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
 # estimated number of clusters; bootstraps = number of sub-samples included in consensus
-number_of_clusters: "3"
+number_of_clusters: 3
 
 # iterations between loop invariance checks; loop exit test; absolute max loops; network weighting factor
 nmf_conv_check_freq: "50"
@@ -24,5 +24,5 @@ rwr_max_iterations: "100"
 rwr_restart_probability: "0.7"
 rwr_convergence_tolerence: "0.0001"
 
-display_clusters: "0"
-use_parallel_processing: "0"
+display_clusters: 0
+processing_method: 0
