--- a/data/run_files/nmf_run_file.yml
+++ b/data/run_files/nmf_run_file.yml
@@ -10,12 +10,12 @@ results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
 # estimated number of clusters
-number_of_clusters: "3"
+number_of_clusters: 3
 
 # iterations between loop invariance checks; loop exit test; absolute max loops
 nmf_conv_check_freq: "50"
 nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
 
-display_clusters: "0"
-use_parallel_processing: "0"
+display_clusters: 0
+processing_method: 0
