--- a/data/run_files/template_run_parameters.yml
+++ b/data/run_files/template_run_parameters.yml
@@ -24,7 +24,7 @@ tmp_directory: ./run_dir/tmp
 number_of_clusters: 3
 #	Inner dimension of matrix factorization will be set to this.
 
-display_clusters: "0"
+display_clusters: 0
 #	Display clustering graphically may require system accomodations.
 
 nmf_conv_check_freq: "50"
