--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -14,8 +14,8 @@ tmp_directory: ./run_dir/tmp
 number_of_clusters: 3
 number_of_bootstraps: 4
 
-rows_sampling_fraction: "0.8"
-cols_sampling_fraction: "0.8"
+rows_sampling_fraction: 0.8
+cols_sampling_fraction: 0.8
 
 # iterations between loop invariance checks; loop exit test; absolute max loops; network weighting factor
 nmf_conv_check_freq: "50"
@@ -34,10 +34,10 @@ display_clusters: 0
 processing_method: 2
 
 cluster_ip_address:
-- "192.17.176.156"
-- "192.17.176.151"
-- "192.17.176.158"
-- "192.17.176.161"
-- "192.17.176.152"
-- "192.17.176.150"
-#- "128.174.244.71"
+- 192.17.176.156
+- 192.17.176.151
+- 192.17.176.158
+- 192.17.176.161
+- 192.17.176.152
+- 192.17.176.150
+#- 128.174.244.71
