--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -23,3 +23,6 @@ nmf_max_iterations: "10000"
 
 display_clusters: 0
 processing_method: 1
+
+has_phenotype_data: False
+phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
