--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -22,6 +22,8 @@ nmf_max_invariance: "200"
 nmf_max_iterations: "10000"
 
 display_clusters: 0
-processing_method: 1
+
+# processing_method dictionary, valid values are serial, parl_loc, dist_comp 
+processing_method: dist_comp 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
