--- a/data/run_files/net_nmf_run_file.yml
+++ b/data/run_files/net_nmf_run_file.yml
@@ -25,6 +25,8 @@ rwr_restart_probability: "0.7"
 rwr_convergence_tolerence: "0.0001"
 
 display_clusters: 0
-processing_method: 0
+
+# processing_method dictionary, valid values are serial, parl_loc, dist_comp 
+processing_method: dist_comp 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
