--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -27,3 +27,20 @@ display_clusters: 0
 processing_method: dist_comp 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
+
+cluster_ip_address:
+# AWS env
+- 172.31.47.99
+- 172.31.41.138
+# Dev env
+#- 192.17.176.156
+#- 192.17.176.151
+#- 192.17.176.158
+#- 192.17.176.161
+#- 192.17.176.152
+#- 192.17.176.150
+#- 128.174.244.71
+
+cluster_shared_ram: /mnt/ramdisk/knoweng/
+
+cluster_shared_volumn: /mnt/clustershare/knoweng/
