--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -35,6 +35,7 @@ processing_method: dist_comp
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
 
+# AWS configuration
 cluster_ip_address:
 # AWS env
 - 172.31.47.99
@@ -48,6 +49,7 @@ cluster_ip_address:
 #- 192.17.176.150
 #- 128.174.244.71
 
+# AWS configuration
 cluster_shared_ram: /mnt/ramdisk/knoweng/
-
+# AWS configuration
 cluster_shared_volumn: /mnt/clustershare/knoweng/
