--- a/data/run_files/cc_nmf_run_file.yml
+++ b/data/run_files/cc_nmf_run_file.yml
@@ -24,6 +24,9 @@ nmf_max_iterations: "10000"
 display_clusters: 0
 
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp 
+# Single core machine: set the processing_method value to be serial
+# multi core machine: set the processing_method value to be parl_loc
+# multi node machine: set the processing_method value to be dist_comp 
 processing_method: dist_comp 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
