--- a/data/run_files/cc_net_nmf_run_file.yml
+++ b/data/run_files/cc_net_nmf_run_file.yml
@@ -31,7 +31,7 @@ rwr_convergence_tolerence: "0.0001"
 display_clusters: 0
 
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp
-# Single core machine: set the processing_method value to be serial
+# single core machine: set the processing_method value to be serial
 # multi core machine: set the processing_method value to be parl_loc
 # multi node machine: set the processing_method value to be dist_comp 
 processing_method: parl_loc
