added benchmark test target

--- a/test/Makefile
+++ b/test/Makefile
@@ -52,3 +52,6 @@ unit_tests:
 	
 unit_test_cleanup:
 	$(RMR) $(UNIT_TEST_TEMP_DIR)
+
+run_benchmark_test:
+	python3 $(SCRIPT) -run_directory $(RUN_DIR) -run_file benchmark_cc_net_nmf_run_file.yml
