--- a/data/run_files/net_nmf.yml
+++ b/data/run_files/net_nmf.yml
@@ -27,6 +27,6 @@ rwr_convergence_tolerence: "0.0001"
 display_clusters: 0
 
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp 
-processing_method: dist_comp 
+processing_method: parl_loc 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
