--- a/data/run_files/nmf.yml
+++ b/data/run_files/nmf.yml
@@ -20,6 +20,6 @@ nmf_max_iterations: "10000"
 display_clusters: 0
 
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp 
-processing_method: dist_comp 
+processing_method: parl_loc 
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
