--- a/data/run_files/benchmark_cc_net_nmf.yml
+++ b/data/run_files/benchmark_cc_net_nmf.yml
@@ -11,31 +11,23 @@ spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data
 results_directory: ./benchmarks
 tmp_directory: ./run_dir/tmp
 
-# estimated number of clusters; bootstraps = number of sub-samples included in consensus
 number_of_clusters: 3
-number_of_bootstraps: 48
-
+number_of_bootstraps: 4
 rows_sampling_fraction: 0.8
 cols_sampling_fraction: 0.8
-
-# iterations between loop invariance checks; loop exit test; absolute max loops; network weighting factor
-nmf_conv_check_freq: "50"
-nmf_max_invariance: "200"
-nmf_max_iterations: "10000"
-nmf_penalty_parameter: "1400"
-
-# random walk with restart absolute max iterations; restart vector weight; delta norm loop exit;
-rwr_max_iterations: "100"
-rwr_restart_probability: "0.7"
-rwr_convergence_tolerence: "0.0001"
+nmf_conv_check_freq: 50
+nmf_max_invariance: 200
+nmf_max_iterations: 10000
+nmf_penalty_parameter: 1400
+rwr_max_iterations: 100
+rwr_restart_probability: 0.7
+rwr_convergence_tolerence: 0.0001
 
 display_clusters: 0
 
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp
-# single core machine: set the processing_method value to be serial
-# multi core machine: set the processing_method value to be parl_loc
-# multi node machine: set the processing_method value to be dist_comp 
 processing_method: parl_loc
+
 
 phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
 
