--- a/data/run_files/nmf.yml
+++ b/data/run_files/nmf.yml
@@ -2,24 +2,16 @@
 
 method: cluster_nmf
 
-# Gene x Set-id Spreadsheet
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-
-# directories for storing run results and tmp data
 results_directory: ./run_dir/results
 tmp_directory: ./run_dir/tmp
 
-# estimated number of clusters
 number_of_clusters: 3
-
-# iterations between loop invariance checks; loop exit test; absolute max loops
-nmf_conv_check_freq: "50"
-nmf_max_invariance: "200"
-nmf_max_iterations: "10000"
+nmf_conv_check_freq: 50
+nmf_max_invariance: 200
+nmf_max_iterations: 10000
 
 display_clusters: 0
 
-# processing_method dictionary, valid values are serial, parl_loc, dist_comp 
-processing_method: parl_loc 
+processing_method: parl_loc # valid values are serial, parl_loc, dist_comp 
 
-phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
