--- a/data/run_files/net_nmf.yml
+++ b/data/run_files/net_nmf.yml
@@ -1,23 +1,31 @@
-# Parameters for network based non-negative matrix factorization.
 
-method: net_cluster_nmf
+method: net_nmf            		# Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
-gg_network_name_full_path: ../data/networks/keg_ST90_4col.edge
+gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-results_directory: ./run_dir/results
-tmp_directory: ./run_dir/tmp
+phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
-number_of_clusters: 3
-number_of_bootstraps: 4
-rows_sampling_fraction: 0.8
-cols_sampling_fraction: 0.8
-nmf_conv_check_freq: 50
-nmf_max_invariance: 200
-nmf_max_iterations: 10000
-nmf_penalty_parameter: 1400
-rwr_max_iterations: 100
-rwr_restart_probability: 0.7
-rwr_convergence_tolerence: 0.0001
+results_directory:           ./benchmarks
+tmp_directory:               ./run_dir/tmp
+
+rwr_max_iterations:         100
+rwr_convergence_tolerence:  1.0e-8
+rwr_restart_probability:    0.7       # Vn+1 = alpha * N * Vn + (1-alpha) * Vo
+
+rows_sampling_fraction:     0.8       # 0.8 means 80% of rows 
+cols_sampling_fraction:     0.8       # 0.8 means 80% of columns
+
+number_of_bootstraps:       4
+
+number_of_clusters:         3
+nmf_conv_check_freq:        50
+nmf_max_invariance:         200
+nmf_max_iterations:         10000
+nmf_penalty_parameter:      1400
+
+
+processing_method:          dist_comp  # available methods: serial, parl_loc, dist_comp
+                                       # available clusters: AWS, CS Cluster
 
 display_clusters: 0
 
