--- a/data/run_files/cc_nmf_parallel.yml
+++ b/data/run_files/cc_nmf_parallel.yml
@@ -21,5 +21,5 @@ nmf_max_iterations:         10000
 nmf_penalty_parameter:      1400
 
 
-processing_method:          serial              # method values: serial, parl_loc, dist_comp
+processing_method:          parl_loc            # method values: serial, parl_loc, dist_comp
                                                 # available clusters: AWS, CS Cluster
