--- a/data/run_files/cc_net_nmf.yml
+++ b/data/run_files/cc_net_nmf.yml
@@ -1,48 +1,29 @@
-# Parameters for consensus clustering, network based, non-negative matrix factorization.
 
-method: cc_net_cluster_nmf
+method: cc_net_cluster_nmf            # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
-# Gene x Gene Network stored in 4 col format;   Gene x Set-id Spreadsheet
-gg_network_name_full_path: ../data/networks/keg_ST90_4col.edge
+gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-results_directory: ./run_dir/results
-tmp_directory: ./run_dir/tmp
+phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
-number_of_clusters: 3
-number_of_bootstraps: 4
-rows_sampling_fraction: 0.8
-cols_sampling_fraction: 0.8
-nmf_conv_check_freq: 50
-nmf_max_invariance: 200
-nmf_max_iterations: 10000
-nmf_penalty_parameter: 1400
-rwr_max_iterations: 100
-rwr_restart_probability: 0.7
-rwr_convergence_tolerence: 0.0001
+results_directory:           ./benchmarks
+tmp_directory:               ./run_dir/tmp
 
-display_clusters: 0
+rwr_max_iterations:         100
+rwr_convergence_tolerence:  1.0e-8
+rwr_restart_probability:    0.7       # Vn+1 = alpha * N * Vn + (1-alpha) * Vo
 
-# processing_method dictionary, valid values are serial, parl_loc, dist_comp
-processing_method: parl_loc
+rows_sampling_fraction:     0.8       # 0.8 means 80% of rows
+cols_sampling_fraction:     0.8       # 0.8 means 80% of columns
 
-phenotype_data_full_path: ../data/spreadsheets/UCECppheno_table.txt
+number_of_bootstraps:       4
+number_of_clusters:         3
 
-# AWS configuration
-cluster_ip_address:
-# AWS env
-- 172.31.47.99
-- 172.31.41.138
-# Dev env
-#- 192.17.176.156
-#- 192.17.176.151
-#- 192.17.176.158
-#- 192.17.176.161
-#- 192.17.176.152
-#- 192.17.176.150
-#- 128.174.244.71
+nmf_conv_check_freq:        50
+nmf_max_invariance:         200
+nmf_max_iterations:         10000
+nmf_penalty_parameter:      1400
 
-# AWS configuration
-cluster_shared_ram: /mnt/ramdisk/knoweng/
-# AWS configuration
-cluster_shared_volumn: /mnt/clustershare/knoweng/
+
+processing_method:          serial    # available methods: serial, parl_loc, dist_comp
+                                      # available clusters: AWS, CS Cluster
 
