--- a/data/run_files/cc_nmf_distributed.yml
+++ b/data/run_files/cc_nmf_distributed.yml
@@ -21,7 +21,7 @@ nmf_max_iterations:         10000
 nmf_penalty_parameter:      1400
 
 
-processing_method:          parl_loc            # method values: serial, parl_loc, dist_comp
+processing_method:          dist_comp            # method values: serial, parl_loc, dist_comp
                                                 # available clusters: AWS, CS Cluster
 
 # ----------------------
