--- a/data/run_files/net_nmf.yml
+++ b/data/run_files/net_nmf.yml
@@ -5,7 +5,7 @@ gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
-results_directory:           ./benchmarks
+results_directory:           ./run_dir/results
 tmp_directory:               ./run_dir/tmp
 
 rwr_max_iterations:         100
@@ -27,7 +27,4 @@ nmf_penalty_parameter:      1400
 processing_method:          dist_comp  # available methods: serial, parl_loc, dist_comp
                                        # available clusters: AWS, CS Cluster
 
-display_clusters: 0
-
-processing_method: serial 	# valid values are serial, parl_loc, dist_comp 
 
