--- a/data/run_files/nmf.yml
+++ b/data/run_files/nmf.yml
@@ -1,17 +1,17 @@
-# Parameters for non-negative matrix factorization.
+method: nmf            		# Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
-method: cluster_nmf
-
+gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-results_directory: ./run_dir/results
-tmp_directory: ./run_dir/tmp
+phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
-number_of_clusters: 3
-nmf_conv_check_freq: 50
-nmf_max_invariance: 200
-nmf_max_iterations: 10000
+results_directory:           ./run_dir/results
+tmp_directory:               ./run_dir/tmp
 
-display_clusters: 0
+number_of_clusters:         3
+nmf_conv_check_freq:        50
+nmf_max_invariance:         200
+nmf_max_iterations:         10000
 
-processing_method: parl_loc # valid values are serial, parl_loc, dist_comp 
+processing_method:          dist_comp  # available methods: serial, parl_loc, dist_comp
+                                       # available clusters: AWS, CS Cluster
 
