--- a/data/run_files/cc_net_nmf.yml
+++ b/data/run_files/cc_net_nmf.yml
@@ -1,5 +1,5 @@
 
-method: cc_net_cluster_nmf            # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
+method: cc_net_nmf            		# Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
@@ -10,7 +10,7 @@ tmp_directory:               ./run_dir/tmp
 
 rwr_max_iterations:         100
 rwr_convergence_tolerence:  1.0e-8
-rwr_restart_probability:    0.7       # Vn+1 = alpha * N * Vn + (1-alpha) * Vo
+rwr_restart_probability:    0.7      	# Vn+1 = alpha * N * Vn + (1-alpha) * Vo
 
 rows_sampling_fraction:     0.8       # 0.8 means 80% of rows
 cols_sampling_fraction:     0.8       # 0.8 means 80% of columns
