--- a/data/run_files/cc_net_nmf_parallel.yml
+++ b/data/run_files/cc_net_nmf_parallel.yml
@@ -1,5 +1,5 @@
 
-method: cc_net_cluster_nmf            # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
+method: cc_net_nmf            		# Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
