--- a/data/run_files/cc_nmf.yml
+++ b/data/run_files/cc_nmf.yml
@@ -1,19 +1,19 @@
 
-method: cc_cluster_nmf                        # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
+method: cc_nmf                        	# Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 results_directory:          ./run_dir/results
 tmp_directory:              ./run_dir/tmp
 
-rows_sampling_fraction:     0.8                 # 0.8 means 80% of rows
-cols_sampling_fraction:     0.8                 # 0.8 means 80% of columns
+rows_sampling_fraction:     0.8              	# 0.8 means 80% of rows
+cols_sampling_fraction:     0.8              	# 0.8 means 80% of columns
 
 number_of_clusters:         3
 number_of_bootstraps:       4
 
 rwr_max_iterations:         100
 rwr_restart_probability:    0.7
-rwr_convergence_tolerence:  0.0001              # Vn+1 = alpha * N * Vn + (1-alpha) * Vo
+rwr_convergence_tolerence:  0.0001      	# Vn+1 = alpha * N * Vn + (1-alpha) * Vo
 
 nmf_conv_check_freq:        50
 nmf_max_invariance:         200
@@ -21,5 +21,5 @@ nmf_max_iterations:         10000
 nmf_penalty_parameter:      1400
 
 
-processing_method:          serial              # method values: serial, parl_loc, dist_comp
-                                                # available clusters: AWS, CS Cluster
+processing_method:          serial         	# method values: serial, parl_loc, dist_comp
+                                           	# available clusters: AWS, CS Cluster
