--- a/data/run_files/net_nmf.yml
+++ b/data/run_files/net_nmf.yml
@@ -23,7 +23,7 @@ nmf_max_iterations:         10000
 nmf_penalty_parameter:      1400
 
 
-processing_method:          dist_comp  # available methods: serial, parl_loc, dist_comp
+processing_method:          parl_loc  # available methods: serial, parl_loc, dist_comp
                                        # available clusters: AWS, CS Cluster
 
 
