added key: top_number_of_genes

--- a/data/run_files/TEMPLATE_cc_net_nmf.yml
+++ b/data/run_files/TEMPLATE_cc_net_nmf.yml
@@ -27,6 +27,8 @@ rwr_max_iterations: 100
 rwr_restart_probability: 0.7
 rwr_convergence_tolerence: 0.0001
 
+top_number_of_genes:        100
+
 # processing_method dictionary, valid values are serial, parl_loc, dist_comp
 # single core machine: set the processing_method value to be serial
 # multi core machine: set the processing_method value to be parl_loc
