--- a/data/run_files/net_nmf.yml
+++ b/data/run_files/net_nmf.yml
@@ -22,6 +22,7 @@ nmf_max_invariance:         200
 nmf_max_iterations:         10000
 nmf_penalty_parameter:      1400
 
+top_number_of_genes:        100
 
 processing_method:          parl_loc  # available methods: serial, parl_loc, dist_comp
                                        # available clusters: AWS, CS Cluster
