--- a/data/run_files/DISTRIBUTED_cc_net_nmf.yml
+++ b/data/run_files/DISTRIBUTED_cc_net_nmf.yml
@@ -1,12 +1,12 @@
 
-method: cc_net_nmf                      # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
+method: cc_net_nmf                    # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
-results_directory:           ./benchmarks
-tmp_directory:               ./run_dir/tmp
+results_directory:          ./benchmarks
+tmp_directory:              ./run_dir/tmp
 
 rwr_max_iterations:         100
 rwr_convergence_tolerence:  1.0e-8
@@ -25,7 +25,7 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          dist_comp  # available methods: serial, parl_loc, dist_comp
+processing_method:          dist_comp  # available methods: serial, parallel, dist_comp
                                        # available clusters: AWS, CS Cluster
 
 # ----------------------
