--- a/data/run_files/DISTRIBUTED_cc_nmf.yml
+++ b/data/run_files/DISTRIBUTED_cc_nmf.yml
@@ -22,7 +22,7 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          dist_comp           # method values: serial, parl_loc, dist_comp
+processing_method:          dist_comp           # method values: serial, parallel, dist_comp
                                                 # available clusters: AWS, CS Cluster
 
 # ----------------------
