--- a/data/run_files/PARALLEL_cc_net_nmf.yml
+++ b/data/run_files/PARALLEL_cc_net_nmf.yml
@@ -24,5 +24,5 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          parl_loc  # available methods: serial, parl_loc, dist_comp
+processing_method:          parallel  # available methods: serial, parallel, dist_comp
                                       # available clusters: AWS, CS Cluster
