--- a/data/run_files/TEMPLATE_cc_net_nmf.yml
+++ b/data/run_files/TEMPLATE_cc_net_nmf.yml
@@ -29,9 +29,9 @@ rwr_convergence_tolerence: 0.0001
 
 top_number_of_genes:        100
 
-# processing_method dictionary, valid values are serial, parl_loc, dist_comp
+# processing_method dictionary, valid values are serial, parallel, dist_comp
 # single core machine: set the processing_method value to be serial
-# multi core machine: set the processing_method value to be parl_loc
+# multi core machine: set the processing_method value to be parallel
 # multi node machine: set the processing_method value to be dist_comp 
 processing_method: serial
 
