--- a/data/run_files/cc_nmf.yml
+++ b/data/run_files/cc_nmf.yml
@@ -22,5 +22,5 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          parl_loc              # method values: serial, parl_loc, dist_comp
+processing_method:          parallel              # method values: serial, parallel, dist_comp
                                                 # available clusters: AWS, CS Cluster
