--- a/data/run_files/nmf.yml
+++ b/data/run_files/nmf.yml
@@ -13,6 +13,6 @@ nmf_max_iterations:         10000
 
 top_number_of_genes:        100
 
-processing_method:          parl_loc  # available methods: serial, parl_loc, dist_comp
+processing_method:          parallel  # available methods: serial, parallel, dist_comp
                                        # available clusters: AWS, CS Cluster
 
