--- a/data/run_files/TEMPLATE_cc_net_nmf.yml
+++ b/data/run_files/TEMPLATE_cc_net_nmf.yml
@@ -4,6 +4,7 @@ method: cc_net_nmf      # nmf, cc_nmf, net_nmf, cc_net_nmf
 # Gene x Gene Network stored in 4 col format;   Gene x Set-id Spreadsheet
 gg_network_name_full_path: ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
+phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
 
 # directories for storing run results and temporary data
 results_directory: ./run_dir/results
