--- a/data/run_files/DISTRIBUTED_cc_net_nmf.yml
+++ b/data/run_files/DISTRIBUTED_cc_net_nmf.yml
@@ -2,9 +2,9 @@ method: cc_net_nmf                    # Available methods: nmf, cc_nmf, net_nmf,
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-phenotype_data_full_path:   ../data/spreadsheets/UCECppheno_table.txt
+phenotype_data_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
 
-results_directory:          ./benchmarks
+results_directory:          ./run_dir/results
 tmp_directory:              ./run_dir/tmp
 
 rwr_max_iterations:         100
