--- a/data/run_files/PARALLEL_cc_net_nmf.yml
+++ b/data/run_files/PARALLEL_cc_net_nmf.yml
@@ -4,7 +4,7 @@ gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 phenotype_data_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
 
-results_directory:          ./benchmarks
+results_directory:          ./run_dir/results
 tmp_directory:              ./run_dir/tmp
 
 rwr_max_iterations:         100
