adding addtional parameter to parallelization functions

--- a/data/run_files/BENCHMARK_7_SC_cc_net_nmf_parallel_shared.yml
+++ b/data/run_files/BENCHMARK_7_SC_cc_net_nmf_parallel_shared.yml
@@ -28,6 +28,8 @@ top_number_of_genes:        100
 
 processing_method:          parallel   # available methods: serial, parallel, distribute
                                        # available clusters: AWS, CS Cluster
+parallelism:                4          # user defined parallelism
+
 # ----------------------
 # Running on AWS cluster
 # ----------------------
