--- a/data/run_files/BENCHMARK_4_SC_cc_nmf_parallel_shared.yml
+++ b/data/run_files/BENCHMARK_4_SC_cc_nmf_parallel_shared.yml
@@ -22,6 +22,9 @@ top_number_of_genes:        100
 
 processing_method:          parallel   # method values: serial, parallel, distribute
                                        # available clusters: AWS, CS Cluster
+parallelism:                4          # user defined parallelism
+
+
 # ----------------------
 # Running on AWS cluster
 # ----------------------
