--- a/data/run_files/zTEMPLATE_cc_net_nmf.yml
+++ b/data/run_files/zTEMPLATE_cc_net_nmf.yml
@@ -4,7 +4,8 @@ method: cc_net_nmf      # nmf, cc_nmf, net_nmf, cc_net_nmf
 # Gene x Gene Network stored in 4 col format;   Gene x Set-id Spreadsheet
 gg_network_name_full_path: ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
-phenotype_name_full_path:   ../data/spreadsheets/UCECppheno_table.txt
+phenotype_name_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
+threshold: 10
 
 # directories for storing run results and temporary data
 results_directory: ./run_dir/results
