--- a/data/run_files/BENCHMARK_1_SC_nmf.yml
+++ b/data/run_files/BENCHMARK_1_SC_nmf.yml
@@ -3,6 +3,7 @@ method: nmf                 # Available methods: nmf, cc_nmf, net_nmf, cc_net_nm
 
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 phenotype_name_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
+threshold: 10
 
 results_directory:           ./run_dir/results
 tmp_directory:               ./run_dir/tmp
