--- a/data/run_files/BENCHMARK_8_SC_cc_net_nmf_parallel_distributed.yml
+++ b/data/run_files/BENCHMARK_8_SC_cc_net_nmf_parallel_distributed.yml
@@ -3,6 +3,7 @@ method: cc_net_nmf          # Available methods: nmf, cc_nmf, net_nmf, cc_net_nm
 
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
 phenotype_name_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
+threshold: 10
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 
