--- a/test/unit/Makefile
+++ b/test/unit/Makefile
@@ -1,4 +1,4 @@
 #.PHONY: all_unit_tests 
 
 all_unit_tests:
-	PYTHONPATH='../../src/' python3 -m unittest discover --pattern=test_*.py
+	PYTHONPATH='../../' python3 -m unittest discover --pattern=test_*.py
